fixed: spacing

--- a/src/components/rwd-production/rwd-production.scss
+++ b/src/components/rwd-production/rwd-production.scss
@@ -39,7 +39,7 @@
 			}
 
 			@include breakpoint($xlarge) {
-				top: -8rem;
+				top: -9rem;
 			}
 
 			@include breakpoint($wide) {
